# Autonomous_Pick-and-Place_Arm_Robotics_Project

./: .gitignore  README.md  launch_all.sh  launch_capstone.sh  robo_terminals.txt  start_sim.sh  stop_sim.sh
src/my_capstone_brain/: package.xml  setup.cfg  setup.py
src/my_capstone_brain/launch/: mycobot_spawn.launch.py
src/my_capstone_brain/my_capstone_brain/: control_node.py  conveyor_node.py  ik_node.py  vision_node.py
src/mycobot_description/: CMakeLists.txt  package.xml
src/mycobot_description/urdf/control/: gazebo_sim_ros2_control.urdf.xacro
worlds/: capstone_world.sdf
